# ado

./: .gitignore  Cargo.toml  README.md  build.rs  ok  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml
config/: functions.json  whois_servers.json
config/functions/: browser.json  files.json  http.json  search.json  shell.json  whois.json
config/samples/: config.toml
container/: build.py  docker-compose.yml
container/templates/: nginx.conf
docker/: build.py
docker/etc/iptables/: rules.v4
docker/templates/: Dockerfile  nginx.conf
scripts/: add_user.py  install.sh  update.py
scripts/container/: build.py  docker-compose.yml
scripts/container/ado/: Dockerfile
scripts/container/templates/: docker-compose.yml  nginx.conf  opensearch.xml
scripts/container/webdis/: webdis.prod.json
src/: config.rs  console.rs  content.rs  error.rs  function_call.rs  functions.rs  genini.rs  lib.rs  logging.rs  main.rs  shell.rs  staples.rs
src/functions/: config.rs  function_args.rs  function_files.rs  function_handler.rs  function_llm.rs  function_whois.rs  functions_desktop_x11.rs  functions_files.rs  functions_http.rs  functions_search.rs  functions_whois.rs  mod.rs
src/lib/: Cargo.toml
src/lib/adolib/: Cargo.toml  build.rs
src/lib/adolib/config/functions/: files.json
src/lib/adolib/config/functions/all/: http.json  ip.json
src/lib/adolib/config/functions/metal/: browser.json  shell.json  whois.json
src/lib/adolib/config/functions/native/: files.json  gui.json  shell.json
src/lib/adolib/src/: cancel.rs  console.rs  const_vars.rs  data.rs  error.rs  lib.rs  staples.rs  wasm_export.rs  wasm_main.rs
src/lib/adolib/src/cache/: kv.rs
src/lib/adolib/src/config/: disk.rs  file.rs  loader.rs
src/lib/adolib/src/config_file/: loader.rs
src/lib/adolib/src/data/: base64_serializer.rs  mod.rs  search.rs  types.rs
src/lib/adolib/src/functions/: assets.rs  config.rs  function_args.rs  function_handler.rs  functions_files.rs  functions_http.rs  functions_ip.rs  functions_search.rs  functions_shell.rs  handler.rs  http.rs  mod.rs  search.rs
src/lib/adolib/src/functions/browser/: browser_metal.rs  browser_wasm.rs  mod.rs
src/lib/adolib/src/functions/whois/: mod.rs  whois_metal.rs  whois_wasm.rs
src/lib/adolib/src/http/: req.rs
src/lib/adolib/src/kv/: cache.rs
src/lib/adolib/src/llm/: chain.rs  mod.rs  provider.rs  question.rs
src/lib/adolib/src/llm/claude/: claude_api.rs  claude_chain.rs  claude_config.rs  claude_tool.rs  mod.rs
src/lib/adolib/src/llm/ollama/: mod.rs  ollama_api.rs  ollama_chain.rs  ollama_config.rs
src/lib/adolib/src/llm/openai/: api.rs  chain.rs  mod.rs  openai_api.rs  openai_chain.rs  openai_config.rs  openai_request.rs  openai_response.rs  query.rs  request.rs  response.rs
src/lib/adolib/src/logging/: console.rs  js.rs  mod.rs  wasm.rs
src/lib/adolib/src/mcp/: assets.rs  matrix.rs  mod.rs  types.rs
src/lib/adolib/src/mcp/tools/: browse.rs  file.rs  http.rs  mod.rs  network.rs  shell.rs  web_search.rs
src/lib/adolib/src/mcp/tools/native/: browse.rs  file.rs  shell.rs
src/lib/adolib/src/mcp/tools/wasm/: browse.rs  file.rs  mod.rs  network.rs  shell.rs
src/lib/adolib/src/rest/: mod.rs
src/lib/adolib/src/search/: google.rs  mod.rs  results.rs  serp.rs
src/lib/adolib/src/shell/: mod.rs
src/lib/adolib/src/storage/: local.rs  mod.rs  webdis.rs
src/lib/adolib/src/tools/: args.rs  assets.rs  config.rs  files.rs  function_args.rs  handler.rs  http.rs  ip_address.rs  loader.rs  mod.rs  search.rs  shell.rs
src/lib/adolib/src/tools/browser/: browser_metal.rs  browser_wasm.rs
src/lib/adolib/src/tools/whois/: whois_metal.rs  whois_wasm.rs
src/lib/adolib/src/ui/: commands.rs  console.rs  mod.rs  reddit.rs  status.rs  user_commands.rs  wasm.rs  wasm_console.rs
src/lib/adolib/src/wasm/: consoles.rs  entry.rs  main.rs  mod.rs  reddit.rs  storage.rs
src/lib/adolib/test/: search_test.json  serp_results.json
src/lib/adolib/tools/functions/all/: http.json  search.json
src/lib/adolib/tools/functions/native/: browser.json  files.json  ip.json  search.json  shell.json  whois.json
src/lib/adolib/tools/whois/: whois_servers.json
src/lib/adolib/www/: index.html  login.html  search.html
src/lib/adolib/www/css/: loading-screen.css  login.css  main.css
src/lib/adolib/www/js/: app.js  loading-screen.js  search.js  utils.js
src/lib/config/functions/: gui.json  search.json  whois.json
src/lib/src/: console.rs  console_wasm.rs  const_vars.rs  error.rs  lib.rs  staples.rs  wasm_export.rs
src/lib/src/config/: disk.rs  file.rs  mod.rs  wasm.rs
src/lib/src/functions/: assets.rs  config.rs  function_handler.rs  functions_browser.rs  functions_browser_wasm.rs  functions_desktop_x11.rs  functions_files.rs  functions_http.rs  functions_search.rs  functions_shell.rs  functions_whois.rs  functions_whois_wasm.rs  mod.rs
src/lib/src/functions/browser/: browser_metal.rs  mod.rs
src/lib/src/functions/whois/: mod.rs
src/lib/src/llm/openai/: query.rs  request.rs  response.rs
src/lib/src/ui/: console.rs  mod.rs  user_commands.rs  wasm.rs
src/lib/www/: index.html
src/llm/gemini/: content.rs  genini.rs  mod.rs
src/llm/openai/: close_ai.rs  mod.rs  query.rs  request.rs  response.rs
test/: claude_mcp_use.json  claude_tool_use.json  openai_response.json  openai_response_final.json  search_test.json  serve_local.py  test_config.toml  test_resp.json
www/: index.html  login.html
www/css/: loading-screen.css  login.css  main.css
www/js/: ado-client.js  app.js  utils.js
