[workspace]
resolver = "2"
members = ["src/bin/ado", "src/lib/adolib"]

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.dependencies]
adolib = { path = "src/lib/adolib" }
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "suggestions"] }
colored = "3.1"
dirs = "6.0"
thiserror = "2"
env_logger = "0.11"
figlet-rs = "0.1"
glob = "0.3"
home = "0.5"
log = "0.4"
reqwest = { version = "0.13", features = ["json", "query"] }
rstaples = "0.4.1"
rust-embed = { version = "8.11", features = ["debug-embed"] }
rustyline = { version = "17.0", features = [
  "custom-bindings",
  "derive",
  "rustyline-derive",
  "termios",
  "with-fuzzy",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tempfile = "3.26"
tokio = { version = "1.50", default-features = false, features = [
  "macros",
  "test-util",
  "tokio-macros"
] }
toml = "1.0"
uuid = { version = "1.22", features = ["v4"] }
vergen-git2 = { version = "9.1", features = ["build"] }
walkdir = "2.5"
which = "8.0"
anyhow = "1.0"
ureq = "3.2"

[profile.release]
opt-level = "s"
lto = true
