[workspace]
resolver = "2"
members = ["src/bin/ado", "src/lib/adolib"]

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.dependencies]
adolib = { path = "src/lib/adolib" }
ansi-to-tui = "8"
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "suggestions"] }
colored = "3.1"
dirs = "6.0"
thiserror = "2"
env_logger = "0.11"
figlet-rs = "0.1"
glob = "0.3"
home = "0.5"
log = "0.4"
rust-embed = { version = "8.11", features = ["debug-embed"] }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
tui-input = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tempfile = "3.27"
toml = "1.0"
uuid = { version = "1.22", features = ["v4"] }
vergen-git2 = { version = "9.1", features = ["build"] }
walkdir = "2.5"
which = "8.0"
anyhow = "1.0"
ureq = "3.2"

#
# LINT
#
[workspace.lints.clippy]
arithmetic_side_effects = "warn"
# Correctness lints
clone_on_ref_ptr = "warn"  # Avoid unnecessary clones of Arc/Rc
# Code quality lints
dbg_macro = "warn"  # Catch debug macros before commit
exit = "warn"  # Prefer proper error handling over process::exit
expect_used = "warn"
filetype_is_file = "warn"  # Catch misuse of is_file()
indexing_slicing = "warn"  # Prevent potential panics from indexing
# Performance lints
inefficient_to_string = "warn"  # Use more efficient string conversion
large_enum_variant = "warn"  # Optimize enum memory layout
lossy_float_literal = "warn"  # Catch precision loss in float literals
manual_ok_or = "warn"  # Use ok_or_else for lazy evaluation
mem_forget = "warn"  # Catch potential memory leaks
missing_errors_doc = "allow"
needless_pass_by_ref_mut = "warn"
or_fun_call = "warn"  # Use unwrap_or_else instead of unwrap_or
# Security-related lints
panic = "warn"  # Avoid panics in production code
pedantic = { level = "warn", priority = -1 }
todo = "warn"  # Catch unfinished code before release
unimplemented = "warn"  # Catch placeholder implementations
unwrap_used = "warn"
use_debug = "warn"  # Catch Debug formatting in production


[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = 2
