[package]
name = "adolib"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64.workspace = true
dirs.workspace = true
thiserror.workspace = true
glob.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true

[build-dependencies]
chrono.workspace = true
vergen-git2.workspace = true
