[package]
name = "adolib"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64.workspace = true
dirs.workspace = true
glob.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true

[build-dependencies]
vergen-git2.workspace = true

[lints]
workspace = true
