[package]
name = "adolib"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
dirs.workspace = true
glob.workspace = true
log.workspace = true
sled.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true
walkdir.workspace = true
md-5.workspace = true
hex.workspace = true

[dev-dependencies]
env_logger.workspace = true
tempfile.workspace = true
uuid.workspace = true

[build-dependencies]
vergen-git2.workspace = true

[lints]
workspace = true
